# bird-camera-server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude/: settings.local.json
.github/workflows/: build.yml
logo/: source.ai
src/: auth.rs  camera.rs  main.rs
src/backends/: avfoundation_bridge.h  avfoundation_bridge.m  canon.rs  mod.rs
src/backends/avfoundation/: bridge.h  bridge.m  mod.rs
src/backends/canon/: mod.rs
src/backends/webcam_macos/: bridge.h  bridge.m  mod.rs
src/backends/webcam_windows/: mod.rs
src/camera/: directshow.rs  media_foundation.rs  mod.rs
src/routes/: cameras.rs
static/: index.html
