[package]
name = "bird-camera-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
nokhwa = { version = "0.10", features = ["input-native"] }
hyper = "1"
bytes = "1"

