[package]
name = "bird-camera-server"
version = "0.1.0"
edition = "2021"

[features]
backend-canon = []
backend-avfoundation = []

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[build-dependencies]
cc = "1"
