[package]
name = "bird-camera-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
backend-canon = []
backend-avfoundation = []
backend-webcam-windows = ["dep:windows", "dep:image"]

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg"] }
windows = { version = "0.58", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
    "Win32_Media_DirectShow",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
cc = "1"
